--- a/contact.html
+++ b/contact.html
@@ -25,9 +25,9 @@
           Name: <input type="text" name="name"><br>
           Address: <input type="text" name="name">
           <select name="state">
-            <option class = "state" value="UT">Utah</option>
-            <option class = "state" value="CA">California</option>
-            <option class = "state" value="NY">New York</option>
+            <option id = "state1" class = "state" value="UT">Utah</option>
+            <option id = "state2" class = "state" value="CA">California</option>
+            <option id = "state3" class = "state" value="NY">New York</option>
           </select>        
       </fieldset>
       <input id="maleRB" type="radio" name="gender" value="male">
@@ -38,7 +38,7 @@
       <input id='newsCB' type="checkbox" name="news" value="news">
         <label for="newsCB">
           I would like to subscribe to the newsletter.
-        </label></br>
+        </label><br>
       <button type="submit" name="SubmitButton" value="Submit">Submit</button>
       <button type="reset" name="ResetButton" value="Reset">Reset</button>
     </form>
@@ -46,8 +46,12 @@
 	<script>
 			//Step 5: Set an id on each option in the select tag. Name the id's state1, state2, and state3.
 			//Change the states that are used in the dropdown box to "Missouri", "Iowa", "Nebraska". Use the states abbreviation for the value property.
-
-			
+        //document.getElementById("state1").innerHTML = "Missouri";
+        //document.getElementById("state2").innerHTML = "Iowa";
+        //document.getElementById("state3").innerHTML = "Nebraska";
+        //document.getElementById("state1").value = "MO";
+        //document.getElementById("state2").value = "IO";
+        //document.getElementById("state3").value = "NE";
 			
 			
 			
@@ -57,6 +61,9 @@
 	
 			//Comment out the code for Step 5. On the Contact.html page, set a class id called "state" on each option in the select tag. 
 			//Write the code to change all of the states to the word "Hello". 
+        document.getElementById("state1").innerHTML = "Hello";
+        document.getElementById("state2").innerHTML = "Hello";
+        document.getElementById("state3").innerHTML = "Hello";
 
 			
 			
