--- a/blog.html
+++ b/blog.html
@@ -36,6 +36,7 @@
    <script>
 			//Step 3: Set and id called "blogline" on the "aside" tag. 
 			//Change the text on the aside element to say "March Madness wrap now available!"
+       document.getElementById("blogline").innerHTML = "March Madness wrap now available!";
 
 			
 			
@@ -46,7 +47,10 @@
 			
 			
 			//Step 4: Change the h3 tags to be italic
-			
+       var x = document.getElementsByTagName("h3")
+       for (){
+           
+       }
 			
 			
 			
